# co2mon

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  co2mon.hpp
configs/: 98-co2mon.rules  co2mini.service  index.html
hidapi/: CMakeLists.txt
logger/: CMakeLists.txt  configs.json  main.cpp
